--- a/index.html
+++ b/index.html
@@ -6,15 +6,91 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title></title>
+  <title>Animation Goodness</title>
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/main.css">
+  <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed:200,300,400" rel="stylesheet">
   <script src="js/vendor/prefixfree.js"></script>
 </head>
 
 <body>
+
+<svg class="logo" viewBox="0 0 189.75 210.61">
+  <path id="background" d="M185.4,28.62c-3.6-4.1-8.8-7.7-14.6-10.6C149.8,7.42,112-.28,87.5,1.92c-16.2,1.4-27.3,2.9-42.9,7.2-12.3,3.4-26.3,8.9-34.3,15.7-4.7,4-8,7.4-9,15.9-2,17.9,5.8,47.5,11.2,63.5,7.2,21.3,12.7,32.9,24.5,50.4,3.4,5,6.9,10,10.5,14.6A245.54,245.54,0,0,0,70.7,196a88.4,88.4,0,0,0,13.5,11.4c5.5,3.7,10.9,6.8,18.5,3,17.1-8.8,38.3-35.8,49-51.1,15.6-22.2,23.6-42,31.4-68.7,3.6-12.3,7.4-28.6,7.6-42.5C190.9,39.22,190.1,33.82,185.4,28.62Z" fill="#b00" />
+  <path id="foreground" d="M185.4,28.62c-3.6-4.1-8.8-7.7-14.6-10.6C149.8,7.42,112-.28,87.5,1.92c-16.2,1.4-27.3,2.9-42.9,7.2-12.3,3.4-26.3,8.9-34.3,15.7-4.7,4-8,7.4-9,15.9-2,17.9,5.8,47.5,11.2,63.5,7.2,21.3,12.7,32.9,24.5,50.4,3.4,5,6.9,10,10.5,14.6A245.54,245.54,0,0,0,70.7,196a88.4,88.4,0,0,0,13.5,11.4c5.5,3.7,10.9,6.8,18.5,3,17.1-8.8,38.3-35.8,49-51.1,15.6-22.2,23.6-42,31.4-68.7,3.6-12.3,7.4-28.6,7.6-42.5C190.9,39.22,190.1,33.82,185.4,28.62Zm-25.3,106.2c-10.5,20.1-32.8,49.7-50,64.1a46.88,46.88,0,0,1-9.7,6.5c-5,2.3-8.2.7-12.1-1.7-13.2-8-30.2-29.4-39.5-41.9-3.1-4.2-7-10.1-9.9-14.6-2-3.1-2.3-2.9-2.3-5.7.2-16.9,18.2-28.6,30.9-34.2,14.9-6.6,33.3-11.3,51.2-14,9.7-1.4,19.1-2.5,29-3.5,3-.3,27.6-2.1,30.6-1.8A261.51,261.51,0,0,1,160.1,134.82Zm22.5-64.7c-.6,3.1-1.4,5.9-2,9a106.6,106.6,0,0,1-11.3-.3c-3.7-.2-7.7-.2-11.4-.2-32.9-.1-76.8.7-108.2,7.4-8.8,1.9-18.4,4.4-26.1,8.6-3.9,2.1-5.6,4-6.7,4.6-4.6-14.9-11.9-39.7-10-56,.9-7.7,3.8-10.7,8.1-14.1,14.7-11.5,44.8-18.3,68.3-20.4,23.9-2.1,55,2.7,76.7,11.3,9.1,3.6,22,9.5,24.4,19.9C186.3,48.62,184.3,61.32,182.6,70.12ZM78.9,38.42H68.4c-.7,4.3-2.4,11.5-3.4,16.3-.4,1.9-.8,3.8-2.4,4.1-2.6.6-2.1-2.4-1.8-4.1.4-1.9.7-3.6,1.1-5.4a105.19,105.19,0,0,0,2.2-10.9H53.7c-.4.7-3.6,16.3-3.9,18.3-1.4,8.1,5.1,10,12.4,9.6,12.9-.8,12.8-9.4,14.7-18.4a70.16,70.16,0,0,0,2-9.5ZM104,55.52l-9.9-.1c-.4,1.7-1.9,5-4.3,3.3-2-1.4.4-11.5,2.2-13.2.7-.6,2.1-1.2,3.1-.6s.8,2.1.8,3.4h9.6c.5-4.9-.1-7.4-3.3-9.3-5.9-3.5-20.4-2.1-23.5,12.4-1.8,8.8,1.3,14.5,10.1,14.7,8,.3,13.9-3.9,15.2-10.6Zm30.3-9.9h6.4c.1,2.4-4.1,18-3.8,19.9h10.3a82.93,82.93,0,0,0,2.1-9.9c.4-2,1.5-8.7,2.2-9.9h6.3a49.18,49.18,0,0,0,1.6-7.3H135.8l-1.5,7.2Zm21.5,19.9h10.6l5.6-27.1H161.4Zm-112-26c-2.8-1.2-5.6-1.2-9-1.2-2.9,0-7.5-.3-10.1.1l-5.7,27c12.2.2,24.7,2.1,28.9-11.7C49.8,47.52,48.9,41.72,43.8,39.52ZM37.2,53c-.9,3.7-2,6.6-6.6,6.3l3.2-14.7C39.3,44.22,38.1,48.92,37.2,53ZM130,38.42c-3.2-.2-10-.1-13.7-.1l-7.1,13.6c-1,1.9-6.7,12.4-6.9,13.6h9.9l2-4.3h7.6l.1,4.1c1.2.4,8.6.2,10.9.2Zm-8.4,16.1h-4.3a80.31,80.31,0,0,1,4.3-9.8Z"  />
+</svg>
+
+
+  <div class="overlay__bg">
+
+    <div class="overlay__trigger">
+      <div class="overlay__trigger-icon">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+      <div class="overlay__trigger-text">Book a test ride</div>
+    </div>
+
+    <span></span>
+    <span></span>
+    <span></span>
+
+    <div class="overlay__content">
+
+      <div>
+        <svg class="logo" viewBox="0 0 189.75 210.61">
+          <path id="background" d="M185.4,28.62c-3.6-4.1-8.8-7.7-14.6-10.6C149.8,7.42,112-.28,87.5,1.92c-16.2,1.4-27.3,2.9-42.9,7.2-12.3,3.4-26.3,8.9-34.3,15.7-4.7,4-8,7.4-9,15.9-2,17.9,5.8,47.5,11.2,63.5,7.2,21.3,12.7,32.9,24.5,50.4,3.4,5,6.9,10,10.5,14.6A245.54,245.54,0,0,0,70.7,196a88.4,88.4,0,0,0,13.5,11.4c5.5,3.7,10.9,6.8,18.5,3,17.1-8.8,38.3-35.8,49-51.1,15.6-22.2,23.6-42,31.4-68.7,3.6-12.3,7.4-28.6,7.6-42.5C190.9,39.22,190.1,33.82,185.4,28.62Z" fill="#b00" />
+          <path id="foreground" d="M185.4,28.62c-3.6-4.1-8.8-7.7-14.6-10.6C149.8,7.42,112-.28,87.5,1.92c-16.2,1.4-27.3,2.9-42.9,7.2-12.3,3.4-26.3,8.9-34.3,15.7-4.7,4-8,7.4-9,15.9-2,17.9,5.8,47.5,11.2,63.5,7.2,21.3,12.7,32.9,24.5,50.4,3.4,5,6.9,10,10.5,14.6A245.54,245.54,0,0,0,70.7,196a88.4,88.4,0,0,0,13.5,11.4c5.5,3.7,10.9,6.8,18.5,3,17.1-8.8,38.3-35.8,49-51.1,15.6-22.2,23.6-42,31.4-68.7,3.6-12.3,7.4-28.6,7.6-42.5C190.9,39.22,190.1,33.82,185.4,28.62Zm-25.3,106.2c-10.5,20.1-32.8,49.7-50,64.1a46.88,46.88,0,0,1-9.7,6.5c-5,2.3-8.2.7-12.1-1.7-13.2-8-30.2-29.4-39.5-41.9-3.1-4.2-7-10.1-9.9-14.6-2-3.1-2.3-2.9-2.3-5.7.2-16.9,18.2-28.6,30.9-34.2,14.9-6.6,33.3-11.3,51.2-14,9.7-1.4,19.1-2.5,29-3.5,3-.3,27.6-2.1,30.6-1.8A261.51,261.51,0,0,1,160.1,134.82Zm22.5-64.7c-.6,3.1-1.4,5.9-2,9a106.6,106.6,0,0,1-11.3-.3c-3.7-.2-7.7-.2-11.4-.2-32.9-.1-76.8.7-108.2,7.4-8.8,1.9-18.4,4.4-26.1,8.6-3.9,2.1-5.6,4-6.7,4.6-4.6-14.9-11.9-39.7-10-56,.9-7.7,3.8-10.7,8.1-14.1,14.7-11.5,44.8-18.3,68.3-20.4,23.9-2.1,55,2.7,76.7,11.3,9.1,3.6,22,9.5,24.4,19.9C186.3,48.62,184.3,61.32,182.6,70.12ZM78.9,38.42H68.4c-.7,4.3-2.4,11.5-3.4,16.3-.4,1.9-.8,3.8-2.4,4.1-2.6.6-2.1-2.4-1.8-4.1.4-1.9.7-3.6,1.1-5.4a105.19,105.19,0,0,0,2.2-10.9H53.7c-.4.7-3.6,16.3-3.9,18.3-1.4,8.1,5.1,10,12.4,9.6,12.9-.8,12.8-9.4,14.7-18.4a70.16,70.16,0,0,0,2-9.5ZM104,55.52l-9.9-.1c-.4,1.7-1.9,5-4.3,3.3-2-1.4.4-11.5,2.2-13.2.7-.6,2.1-1.2,3.1-.6s.8,2.1.8,3.4h9.6c.5-4.9-.1-7.4-3.3-9.3-5.9-3.5-20.4-2.1-23.5,12.4-1.8,8.8,1.3,14.5,10.1,14.7,8,.3,13.9-3.9,15.2-10.6Zm30.3-9.9h6.4c.1,2.4-4.1,18-3.8,19.9h10.3a82.93,82.93,0,0,0,2.1-9.9c.4-2,1.5-8.7,2.2-9.9h6.3a49.18,49.18,0,0,0,1.6-7.3H135.8l-1.5,7.2Zm21.5,19.9h10.6l5.6-27.1H161.4Zm-112-26c-2.8-1.2-5.6-1.2-9-1.2-2.9,0-7.5-.3-10.1.1l-5.7,27c12.2.2,24.7,2.1,28.9-11.7C49.8,47.52,48.9,41.72,43.8,39.52ZM37.2,53c-.9,3.7-2,6.6-6.6,6.3l3.2-14.7C39.3,44.22,38.1,48.92,37.2,53ZM130,38.42c-3.2-.2-10-.1-13.7-.1l-7.1,13.6c-1,1.9-6.7,12.4-6.9,13.6h9.9l2-4.3h7.6l.1,4.1c1.2.4,8.6.2,10.9.2Zm-8.4,16.1h-4.3a80.31,80.31,0,0,1,4.3-9.8Z" />
+        </svg>
+
+        <span>Welcome to Ducati Power</span>
+
+        <form>
+          <div class="input">
+            <input type="text" id="name" name="user_name" value="">
+            <label for="name" class="input">Name</label>
+          </div>
+          <div class="input">
+            <input type="email" id="email" name="user_email" value="">
+            <label for="email" class="input">Email</label>
+          </div>
+          <div class="select">
+            <select id="location" name="user_location">
+              <option value="" >Select Location</option>
+              <option value="Leeds">Leeds</option>
+              <option value="Manchester">Manchester</option>
+              <option value="London">London</option>
+            </select>
+            <label>Location</label>
+          </div>
+          <div class="button">Ready</div>
+        </form>
+      </div>
+
+      <span>
+        <svg id="logo-type" viewBox="0 0 116 602">
+          <path style="fill: white;" id="ducati" d="M3.2,40.6V0.7l108,22.4V63L3.2,40.6z M3.2,578.3v-47.1c0-8.8,0.9-17.6,4.2-26.3c6.5-19.2,22.9-23.1,41.8-21.5
+        	c13.9,2.3,27.7,6.2,38.3,15c18,12.9,23.8,34.4,23.8,56.1v46.2L3.2,578.3L3.2,578.3z M28.6,542.5l58.2,12c0-22.4-7.4-22.4-31.9-27.9
+        	C37.6,522.4,28.6,524,28.6,542.5L28.6,542.5z M3.2,463.2V421l65.6,13.6c3.9,0.7,18,3.9,16.4-6.5c-0.9-6.5-9-8.8-16.4-10.4L3.2,404.1
+        	v-41.6l61.4,12.9c21.2,3.9,30.3,9.5,38.3,19.9c8.3,10.4,11.5,21.7,11.5,39.3c0,32.8-10.6,49.4-49.9,41.6L3.2,463.2L3.2,463.2z
+        	 M44,296.3c-13.9-3.2-21.2,8.1-6.5,18.5c7.4,4.6,49.9,17.6,49.2,0c-0.9-7.2-5.8-8.8-14.8-11.3v-40c27.7,8.8,42.5,27.3,42.5,57.5
+        	c0,15.2-3.2,24.9-10.6,32.8c-10.6,12-31.2,12.9-45.7,10.4c-37.6-7.9-59.8-35.1-57.3-69.5c1.6-29.6,15.5-40,43.2-36.7L44,296.3
+        	L44,296.3z M3.2,217.3v-54.5l108.1-10.4v42.5l-16.4,1.6v29.6l16.4,6.2v41.6L3.2,217.3L3.2,217.3z M67.8,214.7v-18.2H27L67.8,214.7
+        	L67.8,214.7z M3.2,142.9V48.7l28.6,6.2v27.3l79.4,15.9V139l-79.4-16.2v26.3L3.2,142.9L3.2,142.9z" />
+        </svg>
+      </span>
+      <span></span>
+      <span></span>
+    </div>
+
+    <div class="overlay__close">
+      <span></span>
+      <span></span>
+    </div>
+  </div>
 
 
 
